[package]
name = "imoteph-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
network = {path = "../network"}
tokio ={ version = "1",features = ["full"] }
futures = "0.3.21"
async-trait = "0.1.56"
async-std = "1.12.0"
libp2p ={version = "0.45.1", features= ["tcp-tokio"] }

