[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p ={version = "0.45.1", features= ["tcp-tokio"] }
tokio ={ version = "1",features = ["full"] }
serde = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.21"
async-trait = "0.1.56"
async-std = "1.12.0"

